update imageRoom service, videoRoom service

--- a/src/main/resources/templates/user/fragments/sidebar.html
+++ b/src/main/resources/templates/user/fragments/sidebar.html
@@ -34,8 +34,8 @@
                 <li><span>TK Chính:</span> <span style="font-weight: 700;" th:text="${@moneyUtils.formatCurrency(#authentication.principal.user.accountBalance)}"> 0</span></li>
             </ul>
             <div class="d-flex" style="padding-left: 13px">
-                <a class="btn btn-sm btn-warning mr-2" href="#" role="button">Nạp tiền</a>
-                <a class="btn btn-sm btn-danger text-white" href="#" role="button">Đăng tin</a>
+                <a class="btn btn-sm btn-warning mr-2" href="/quan-ly/nap-tien" role="button">Nạp tiền</a>
+                <a class="btn btn-sm btn-danger text-white" href="/quan-ly/dang-tin-moi" role="button">Đăng tin</a>
             </div>
         </div>
 
