--- a/src/main/resources/templates/web/fragments/header.html
+++ b/src/main/resources/templates/web/fragments/header.html
@@ -47,7 +47,7 @@
                     </a>
 
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item dang-tin" href="/quan-ly/quan-ly/dang-tin-moi"><i></i>Đăng tin cho thuê</a></li>
+                        <li><a class="dropdown-item dang-tin" href="/quan-ly/dang-tin-moi"><i></i>Đăng tin cho thuê</a></li>
                         <li><a class="dropdown-item quan-ly-tin-dang" href="#"><i></i>Quản lý tin đăng</a></li>
                         <li><a class="dropdown-item nap-tien" href="/quan-ly/nap-tien"><i></i>Nạp tiền</a></li>
                         <li><a class="dropdown-item lich-su-nap-tien" href="/quan-ly/lich-su-nap-tien"><i></i>Lịch sử nạp tiền</a></li>
