--- a/src/main/resources/templates/user/pages/create-post.html
+++ b/src/main/resources/templates/user/pages/create-post.html
@@ -57,8 +57,8 @@
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <label for="province">Tỉnh/Thành phố</label>
-                                        <select id="province" class="form-control select2 select2-hidden-accessible" style="width: 100%;" required  tabindex="-1" aria-hidden="true">
-                                            <option>-- Chọn Tỉnh/TP --</option>
+                                        <select id="province" name="province" class="form-control select2 select2-hidden-accessible" style="width: 100%;" required  tabindex="-1" aria-hidden="true">
+                                            <option value="">-- Chọn Tỉnh/TP --</option>
                                         </select>
                                     </div>
                                 </div>
@@ -67,7 +67,7 @@
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <label for="district">Quận/Huyện</label>
-                                        <select id="district" class="form-control select2 select2-hidden-accessible" style="width: 100%;" required  tabindex="-1" aria-hidden="true">
+                                        <select id="district" name="district" class="form-control select2 select2-hidden-accessible" style="width: 100%;" required  tabindex="-1" aria-hidden="true">
                                             <option>-- Chọn Quận/Huyện --</option>
                                         </select>
                                     </div>
@@ -77,7 +77,7 @@
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <label for="ward">Phường/Xã</label>
-                                        <select id="ward" class="form-control select2 select2-hidden-accessible" style="width: 100%;" required  tabindex="-1" aria-hidden="true">
+                                        <select id="ward" name="ward" class="form-control select2 select2-hidden-accessible" style="width: 100%;" required  tabindex="-1" aria-hidden="true">
                                             <option>-- Chọn Phường/Xã --</option>
                                         </select>
                                     </div>
@@ -87,7 +87,7 @@
                                 <div class="col-md-3">
                                     <div class="form-group">
                                         <label for="street-detail" class="col-form-label">Số nhà, tên đường</label>
-                                        <input type="text" class="form-control" name="street-detail" id="street-detail" value="">
+                                        <input type="text" class="form-control" name="streetDetail" id="street-detail" value="">
                                     </div>
                                 </div>
                             </div>
@@ -95,7 +95,7 @@
                                 <div class="col-md-12">
                                     <div class="form-group">
                                         <label for="exact-address" class="col-form-label">Địa chỉ chính xác</label>
-                                        <input type="text" readonly="" class="form-control" name="exact-address" id="exact-address" required="" data-msg-required="Chưa chọn khu vực đăng tin">
+                                        <input type="text" readonly="" class="form-control" name="exact-address" id="exact-address" >
                                     </div>
                                 </div>
                             </div>
@@ -105,9 +105,9 @@
                                 </div>
                             </div>
                             <div class="form-group row mt-3">
-                                <label for="room-category" class="col-md-12">Loại chuyên mục</label>
+                                <label for="room-category" class="col-md-12 col-form-label">Loại chuyên mục</label>
                                 <div class="col-md-6">
-                                    <select id="room-category" class="form-control select2 select2-hidden-accessible" style="width: 100%;" required  tabindex="-1" aria-hidden="true">
+                                    <select id="room-category" name="category" class="form-control select2 select2-hidden-accessible" style="width: 100%;" required  tabindex="-1" aria-hidden="true">
                                         <option value="">-- Chọn loại chuyên mục --</option>
                                         <th:block th:each="category : ${categories}">
                                             <option th:value="${category.id}" th:text="${category.name}"></option>
@@ -118,13 +118,13 @@
                             <div class="form-group row">
                                 <label for="room-title" class="col-md-12 col-form-label">Tiêu đề</label>
                                 <div class="col-md-12">
-                                    <input type="text" class="form-control js-title" name="room-title" id="room-title" value="" minlength="30" maxlength="120" required="" data-msg-required="Tiêu đề không được để trống" data-msg-minlength="Tiêu đề quá ngắn" data-msg-maxlength="Tiêu đề quá dài">
+                                    <input type="text" class="form-control js-title" name="roomTitle" id="room-title" value=""  >
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="room-description" class="col-md-12 col-form-label">Nội dung mô tả</label>
                                 <div class="col-md-12">
-                                    <textarea class="form-control " name="room-description" id="room-description" rows="10" required="" minlength="100" data-msg-required="Bạn chưa nhập nội dung" data-msg-minlength="Nội dung tối thiểu 100 kí tự"></textarea>
+                                    <textarea class="form-control " name="roomDescription" id="room-description" rows="10" ></textarea>
                                 </div>
                             </div>
                             <div class="form-group row">
@@ -149,7 +149,6 @@
                                     <div class="input-group">
                                         <input id="room-price" name="gia" pattern="[0-9.]+" type="text" class="form-control js-gia-cho-thue" required="" data-msg-required="Bạn chưa nhập giá phòng" data-msg-min="Giá phòng chưa đúng">
                                         <div class="input-group-append">
-
                                             <select class="form-control js-unit" name="don_vi" id="don_vi">
                                                 <option value="0">đồng/tháng</option>
                                             </select>
@@ -225,14 +224,18 @@
                                 <div class="col-md-12">
                                     <p>Upload Video từ máy của bạn</p>
                                     <div class="form-group">
-                                        <div for="browse_photos" class="browse_photos js-dropzone-video dz-clickable"><i class="icon-upload-video"></i><span class="js-btn-chon-video">Thêm Video</span></div>
+                                        <div for="browse_photos" class="browse_photos js-dropzone-video dz-clickable">
+                                            <i class="icon-upload-video"></i>
+                                            <span class="js-btn-chon-video">Thêm Video</span>
+                                            <input type="file" id="videos-room" multiple accept=".mov,.mp4,.avi,.mkv,video/*" style="display: none;">
+                                        </div>
                                     </div>
                                     <div class="list_photos row dropzone-previews" id="list-videos-dropzone-previews"></div>
                                     <div id="tpl-video" style="display:none">
                                         <div class="photo_item col-md-2 col-3 js-video-manual">
                                             <div class="photo">
-                                                <video width="100%" height="100%" controls="" id="video">
-                                                    <source src="">
+                                                <video width="100%" height="100%" controls="" id="video" class="dz-video-preview">
+                                                    <source src="" type="video/mp4" data-dz-filetype="">
                                                 </video>
                                             </div>
                                             <div class="dz-progress"><span class="dz-upload" data-dz-uploadprogress=""></span></div>
