--- a/src/main/resources/templates/user/pages/payment-for-service.html
+++ b/src/main/resources/templates/user/pages/payment-for-service.html
@@ -98,7 +98,7 @@
                                 </div>
                                 <div class="d-flex mt-5">
                                     <a href="#" type="button" class="btn btn-gray btn-secondary btn-lg d-flex btn-block align-items-center justify-content-center mr-1">Quay lại</a>
-                                    <button type="submit" class="btn btn-primary btn-lg d-flex btn-block align-items-center justify-content-center mt-0 ml-1 " disabled>Thanh toán:
+                                    <button type="submit" id="btn-payment-service" class="btn btn-primary btn-lg d-flex btn-block align-items-center justify-content-center mt-0 ml-1 " disabled>Thanh toán:
                                         <span style="margin-left: 5px;" class="package-grand-total">10.000đ</span>
                                     </button>
                                 </div>
